# rust_derslerim

./: .gitignore  README.md
c_from_rust/: Cargo.toml  README.md
c_from_rust/src/: main.rs
lgr_65_closures/: Cargo.toml
lgr_65_closures/src/: main.rs
lgr_67_function_pointers/: Cargo.toml
lgr_67_function_pointers/src/: main.rs
lgr_68_iterator_patern/: Cargo.toml
lgr_68_iterator_patern/src/: main.rs
lgr_69_inton_iterator_cont/: Cargo.toml
lgr_69_inton_iterator_cont/src/: main.rs
lgr_70_iter_over_coll/: Cargo.toml
lgr_70_iter_over_coll/src/: main.rs
lgr_71_combinators/: Cargo.toml
lgr_71_combinators/src/: main.rs
lgr_73_creating_thread/: Cargo.toml
lgr_73_creating_thread/src/: main.rs
lgr_74_moving_into_threads/: Cargo.toml
lgr_74_moving_into_threads/src/: main.rs
lgr_75_msg_pass_threads/: Cargo.toml
lgr_75_msg_pass_threads/src/: main.rs
lgr_76_sharing_state_threads/: Cargo.toml
lgr_76_sharing_state_threads/src/: main.rs
lgr_79_async_await_basic/: Cargo.toml
lgr_79_async_await_basic/src/: main.rs
lgr_80_tokio_tasks/: Cargo.toml
lgr_80_tokio_tasks/src/: main.rs  test.py
lgr_82_streams/: Cargo.toml
lgr_82_streams/src/: main.rs
lgr_83_macros/: Cargo.toml
lgr_84_declarative_macros/: Cargo.toml
lgr_84_declarative_macros/src/: lib.rs  main.rs
lgr_86_prosedural_macro/: Cargo.toml
lgr_86_prosedural_macro/src/: lib.rs  main.rs
lgr_89_procedural_macros/: Cargo.toml
lgr_91_unsafe_rust/: Cargo.toml
lgr_95_mut_static_variables/: Cargo.toml
lgr_96_inline_asm/: Cargo.toml
lgr_97_FFI_C_from_rist/: Cargo.toml  build.rs
(+18 files in other folders)
