[package]
name = "lgr_86_prosedural_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
quote="1.0"
chrono="0.4"
syn = {version = "1", features = ["full"]}
darling = "0.13"